--- a/src/assets/scss/community/hotRecommend.scss
+++ b/src/assets/scss/community/hotRecommend.scss
@@ -8,9 +8,8 @@
     width: 100%;
     height: 35px;
     @include flex-center(column);
-    // border-bottom: 1px solid #C8C8C8;
-    font-size: 17px;
-    background-color: #FFD9D9;
+    font-size: 14px;
+    font-weight: bold;
   }
 
   .items{
