--- a/src/assets/scss/community/postDetails.scss
+++ b/src/assets/scss/community/postDetails.scss
@@ -7,6 +7,7 @@
   .container{
     width: 100%;
     max-width: 900px;
+    min-height: 90vh;
     // background-color: #BDF9E5;
     display: flex;
     flex-direction: column;
