--- a/src/assets/scss/mall/productDetail/_index.scss
+++ b/src/assets/scss/mall/productDetail/_index.scss
@@ -15,31 +15,18 @@
     border-radius: 2px;
     list-style: none;
     margin-bottom: 20px;
-    // box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
 
     .postList-main{
       width: 100%;
-      height: 250px;
-      // background-color: #C1FFF9;
+      height: 200px;
       display: flex;
 
       .cosImage{
         flex: 1;
-        height: 180px;
 
-        .bigImg{
+        img{
           width: 100%;
           height: 100%;
-        }
-
-        .smallImages{
-          display: flex;
-
-          img{
-            width: 66px;
-            height: 66px;
-            margin-right: 10px;
-          }
         }
       }
       .desc-operate{
@@ -52,10 +39,16 @@
           font-size: 23px;
           margin-left: 5px;
         }
+        .tags{
+          margin: 8px 0 0;
+          .el-tag{
+            margin: 0 10px 0 5px;
+          }
+        }
         .produtcPrice{
           font-size: 30px;
-          color: #ff9797;
-          margin: 20px 0;
+          color: #FF8686;
+          margin: 10px 0;
         }
         .productUrl{
           color: #2B3CB4;
@@ -79,7 +72,6 @@
           flex: 1;
           display: flex;
           justify-content: flex-end;
-          // margin-top: 10px;
 
           .operate{
             height: 30px;
@@ -90,11 +82,9 @@
             .collection,
             .forward{
               box-sizing: border-box;
-              width: 70px;
+              width: 80px;
               height: 100%;
               @include flex-center();
-              // border-left: 1px solid #E4E4E4;
-              // border-right: 1px solid #E4E4E4;
               cursor: pointer;
 
               img{
