--- a/src/assets/scss/mall/searchDetail/_index.scss
+++ b/src/assets/scss/mall/searchDetail/_index.scss
@@ -11,7 +11,6 @@
     
     .navBox{
       width: 100%;
-      height: 50px;
       box-sizing: border-box;
       padding: 0 30px;
       border-bottom: 1px solid #DDDDDD;
@@ -22,14 +21,19 @@
         width: 120px;
         font-size: 17px;
         color: #000;
+        margin: 20px 0;
       }
 
       .infos{
+        max-width: 950px;
         display: flex;
+        flex-wrap: wrap;
         align-items: center;
         list-style: none;
         font-size: 15px;
         color: #1D88B9;
+        height: 100%;
+        // background-color: #FFCCCC;
 
         li{
           margin-right: 30px;
@@ -37,6 +41,13 @@
         }
         li:hover{
           color: #ff9797;
+        }
+      }
+
+      .brands{
+        margin: 8px 0;
+        li{
+          margin: 6px 30px 5px 0;
         }
       }
     }
