--- a/src/assets/scss/pubComponents/postItem.scss
+++ b/src/assets/scss/pubComponents/postItem.scss
@@ -3,10 +3,8 @@
 
 #postItem{
   width: 100%;
-  @include flex-center();
+  display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
-  box-sizing: border-box;
 
   .hotPostsList-item{
     width: 380px;
@@ -16,16 +14,15 @@
     display: flex;
     flex-wrap: wrap;
     background-color: #fff;
-    // box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
     border: 1px solid #DADADA;
     border-radius: 2px;
     cursor: pointer;
+    margin: 8px 6.5px;
 
     .user{
       width: 100%;
       height: 30px;
       display: flex;
-      // border: 1px solid #939393;
 
       .userInfo{
         display: flex;
@@ -34,7 +31,6 @@
         .avatar{
           width: 32px;
           height: 32px;
-          // border: 1px solid #808080;
           border-radius: 50%;
           box-sizing: border-box;
           // margin: 5px;
@@ -85,7 +81,6 @@
       display: flex;
       justify-content: flex-start;
       align-items: center;
-      // border: 1px solid #808080;
 
       .image{
         width: 120px;
@@ -125,8 +120,3 @@
     transition: box-shadow .3s;
   }
 }
-// #postItem:after {
-//   content: "";
-//   height:0;
-//   display:block;
-// }
