修改了引用图片的七牛云域名

--- a/src/assets/scss/community/messageList.scss
+++ b/src/assets/scss/community/messageList.scss
@@ -129,6 +129,14 @@
           line-height: 20px;
           cursor: pointer;
         }
+
+        a{
+          text-decoration: none;
+          color: #215FA7;
+        }
+      }
+      .body:hover{
+        cursor: pointer;
       }
     }
   }
