--- a/src/assets/scss/index/_styleMigration.scss
+++ b/src/assets/scss/index/_styleMigration.scss
@@ -119,6 +119,8 @@
               }
     
               .images{
+                height: 280px;
+                overflow: hidden;
                 display: flex;
                 flex-wrap: wrap;
                 justify-content: space-around;
@@ -169,6 +171,8 @@
               margin:30px 10px;
               padding: 10px;
 
+
+
               img{
                 width: 100%;
                 height: 100%;
@@ -186,6 +190,12 @@
             width: 30%;
             @include flex-center(column);
             box-sizing: border-box;
+
+            .head{
+              width: 85%;
+              margin-bottom: 10px;
+              text-align: left;
+            }
     
             .dragUpload{
               width: 300px;
