--- a/src/assets/scss/mine/_index.scss
+++ b/src/assets/scss/mine/_index.scss
@@ -12,7 +12,7 @@
 		height: 230px;
     margin-top: 20px;
 		@include flex-center(column);
-		background-image: url('~@/assets/images/minebg.jpg');
+		background-image: url('http://cdn.fengblog.xyz/static/minebg.jpg');
     background-size: 100% 100%;
 
 		.avatar{
