--- a/src/assets/scss/register/_index.scss
+++ b/src/assets/scss/register/_index.scss
@@ -11,7 +11,7 @@
     width: 100vw;
     height: 100vh;
     // background-color: rgba(#000, .3);
-    background-image: url('~@/assets/images/bg1.jpg');
+    background-image: url('http://cdn.fengblog.xyz/static/bg1.jpg');
     background-size: 100vw 100vh;
     background-origin: top left;
     background-attachment: fixed;
